Checkout the cart
